--- a/composer.json
+++ b/composer.json
@@ -1,30 +1,35 @@
 {
-    "name": "tools-table/tools-table",
-    "description": "Paquete de tablas dinámicas compatible con Livewire 3 y 4.",
+    "name": "gambito404/livewire-tables",
+    "description": "Headless Livewire table generator compatible with Livewire 3 and 4",
     "type": "library",
     "license": "MIT",
-    "autoload": {
-        "psr-4": {
-            "ToolsTable\\ToolsTable\\": "src/"
-        }
-    },
-    "authors": [
-        {
-            "name": "Tu Nombre",
-            "email": "tu@email.com"
-        }
+    "keywords": [
+        "laravel",
+        "livewire",
+        "tables",
+        "datatable",
+        "generator"
     ],
     "require": {
         "php": "^8.1",
         "illuminate/support": "^10.0|^11.0|^12.0",
         "livewire/livewire": "^3.0|^4.0"
     },
+    "autoload": {
+        "psr-4": {
+            "Gambito404\\LivewireTables\\": "src/"
+        }
+    },
     "extra": {
         "laravel": {
             "providers": [
-                "ToolsTable\\ToolsTable\\ToolsTableServiceProvider"
+                "Gambito404\\LivewireTables\\LivewireTableServiceProvider"
             ]
         }
+    },
+    "require-dev": {
+        "orchestra/testbench": "^8.0|^9.0",
+        "phpunit/phpunit": "^10.0"
     },
     "minimum-stability": "dev",
     "prefer-stable": true
